[gd_scene load_steps=9 format=2]

[ext_resource path="res://World/World.tscn" type="PackedScene" id=1]
[ext_resource path="res://GUI/GUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://CanvasLayer.gd" type="Script" id=3]
[ext_resource path="res://Game.gd" type="Script" id=4]
[ext_resource path="res://music.ogg" type="AudioStream" id=5]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.408889, 0.457778, 0.528889, 0.604444, 1 )
colors = PoolColorArray( 0.545098, 0.815686, 0.729412, 1, 1, 0.8, 0.407843, 1, 0.92549, 0.541176, 0.294118, 1, 0.831373, 0.305882, 0.321569, 1, 0.284249, 0.369012, 0.468871, 1, 0.164706, 0.164706, 0.227451, 1 )

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;
render_mode blend_mix;

uniform vec4 color1 : hint_color;
uniform vec4 color2 : hint_color;

float rand(vec2 co){
    return fract(sin(dot(co.xy ,vec2(12.9898,78.233))) * 43758.5453);
}

void fragment() {
	vec4 col = mix(color2, color1, UV.y);
	col.rgb += rand(UV+TIME*0.0000001)*0.01;
	
	COLOR = col;
	
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/color1 = Color( 1, 1, 1, 1 )
shader_param/color2 = null

[node name="Game" type="Node"]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1
script = ExtResource( 3 )
sky_gradient = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.278431, 0.984314, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="World" parent="." instance=ExtResource( 1 )]

[node name="GUI" type="CanvasLayer" parent="."]
layer = 3

[node name="GUI" parent="GUI" instance=ExtResource( 2 )]
margin_top = -0.25
margin_bottom = -0.25

[node name="ExportMessage" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -15.0
bus = "music"
[connection signal="show_lines" from="." to="GUI/GUI" method="_on_Game_show_lines"]
[connection signal="sky_height" from="World" to="CanvasLayer" method="_on_World_sky_height"]
[connection signal="attempt_destroy" from="GUI/GUI" to="World" method="_on_GUI_attempt_destroy"]
[connection signal="change_time_enabled" from="GUI/GUI" to="." method="_on_GUI_change_time_enabled"]
[connection signal="early_export" from="GUI/GUI" to="." method="_on_GUI_early_export"]
[connection signal="piece_build_selected" from="GUI/GUI" to="World" method="_on_GUI_piece_build_selected"]
[connection signal="restart" from="GUI/GUI" to="." method="_on_GUI_restart"]
[connection signal="timeout" from="ExportMessage" to="." method="_on_ExportMessage_timeout"]
